Signed-off-by: aa235553756 <aa235553756@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $("body").append("<h1>Use NPM</h1>");
